--- a/src/App.css
+++ b/src/App.css
@@ -305,3 +305,29 @@ h2, .h2 {
   background-color: #727e86;
   border-color: #727e86;
 }
+
+.loader-wrapper {
+  width: 70px;
+  height: 70px;
+  margin: auto;
+}
+
+.loader {
+  border: 10px solid #68ccc4;
+  border-top: 10px solid #093a33;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: 30px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
+}
